# string_ppi_webgraph

./: .gitignore  Cargo.toml  README.md  graph_structure.drawio  ontology_codes.json
stats/: egg_stats.tsv  egg_stats_edges.tsv  oma_stats.tsv  oma_stats_edges.tsv
