[package]
name = "spw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dsi-progress-logger = "0.2.2"
flate2 = "1.0.28"
indicatif = "0.17.7"
itertools = "0.12.0"
rand = "0.8.5"
stderrlog = "0.5.4"
webgraph = {git="https://github.com/vigna/webgraph-rs.git", commit="a3deeb47e2d17135f9e4591e469d9bb1252f244c"}
serde = {version="1.0.192", features=["derive"]}
serde_json = "1.0.108"
